# Rust-Image-Mandelbrot

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: colors.rs  cplex.rs  main.rs
