[package]
name = "Rust-Image-Manipulation"
version = "0.1.0"
authors = ["Jacob <jacobedwardhaig@gmail.com>"]
edition = "2018"



[profile.release]
#lto = true
#codegen-units = 1
#panic = "abort"
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.11"
num = "0.3.1"
rayon="1.5"
