[package]
name = "rust_image_manipulation"
version = "0.1.0"
authors = ["Jacob <jacobedwardhaig@gmail.com>"]
edition = "2021"

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[profile.release]
#lto = true
#codegen-units = 1
#panic = "abort"
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
num = "0.4.0"
rayon = "1.7.0"

f128 = "0.2.9"
